# zboat_project11

./: CMakeLists.txt  package.xml
config/: Project11 Operator UI.desktop  Project11 Operator core.desktop  zboat.yaml  zboat_operator.yaml
launch/: operator_core.launch  operator_ui.launch  vehicle_zboat.launch  zboat_camera.launch
scripts/: start_tmux_operator_core.bash  start_tmux_operator_ui.bash
