<?xml version="1.0"?>
<package format="2">
  <name>zboat_project11</name>
  <version>0.0.0</version>
  <description>The zboat project11 package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>zboat_helm</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
